--- a/xfce-base/xfce4-meta/ChangeLog
+++ b/xfce-base/xfce4-meta/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-meta
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-meta/ChangeLog,v 1.42 2012/09/09 19:23:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-meta/ChangeLog,v 1.43 2012/10/07 09:54:19 ulm Exp $
+
+  07 Oct 2012; Ulrich Müller <ulm@gentoo.org> xfce4-meta-4.10.ebuild:
+  Update LICENSE to "metapackage" non-license.
 
   09 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> -xfce4-meta-4.8.ebuild:
   old
