Drop maintainer due retirement, #72682
Package-Manager: portage-2.1.11.24/cvs/Linux x86_64

--- a/www-client/lynx/ChangeLog
+++ b/www-client/lynx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-client/lynx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/ChangeLog,v 1.134 2012/09/28 06:10:44 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/lynx/ChangeLog,v 1.135 2012/10/07 10:00:20 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, #72682
 
   28 Sep 2012; Tim Harder <radhermit@gentoo.org> lynx-2.8.8_pre14.ebuild:
   Remove old parallel compile workaround.
