--- a/app-text/texlive/ChangeLog
+++ b/app-text/texlive/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/texlive
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.112 2012/09/11 15:44:18 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/ChangeLog,v 1.113 2012/10/07 10:07:23 ulm Exp $
+
+  07 Oct 2012; Ulrich Müller <ulm@gentoo.org> texlive-2011.ebuild,
+  texlive-2011-r1.ebuild, texlive-2012.ebuild:
+  Update LICENSE to "metapackage" non-license.
 
   11 Sep 2012; Raúl Porcel <armin76@gentoo.org> texlive-2012.ebuild:
   Add ~alpha/~ia64/~s390/~sh/~sparc wrt #428248
