--- a/sys-cluster/slurm/ChangeLog
+++ b/sys-cluster/slurm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/slurm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/slurm/ChangeLog,v 1.13 2012/08/23 09:36:49 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/slurm/ChangeLog,v 1.14 2012/10/07 10:09:34 xarthisius Exp $
+
+  07 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org> slurm-2.3.4.ebuild:
+  Add blocker against net-analyzer/sinfo wrt #437476 by Diego Elio Pettenò
+  <flameeyes@gentoo.org>
 
   23 Aug 2012; Kacper Kowalik <xarthisius@gentoo.org>
   +files/slurm-2.3.4-glibc2.16.patch, slurm-2.3.4.ebuild:
