--- a/media-sound/orpheus/ChangeLog
+++ b/media-sound/orpheus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/orpheus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/orpheus/ChangeLog,v 1.28 2012/10/07 09:53:45 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/orpheus/ChangeLog,v 1.29 2012/10/07 10:19:13 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> orpheus-1.6-r2.ebuild:
+  Stable for amd64, wrt bug #424962
 
   07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> orpheus-1.6-r2.ebuild:
   Eapi4, respect AR
