--- a/dev-lisp/asdf/ChangeLog
+++ b/dev-lisp/asdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/asdf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/asdf/ChangeLog,v 1.2 2012/10/01 17:36:00 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/asdf/ChangeLog,v 1.3 2012/10/07 10:19:50 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> asdf-1.89.ebuild:
+  Stable for amd64, wrt bug #436846
 
   01 Oct 2012; Fabian Groffen <grobian@gentoo.org> asdf-1.89.ebuild:
   Marked ~x64-macos
