--- a/app-arch/pigz/ChangeLog
+++ b/app-arch/pigz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/pigz
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/pigz/ChangeLog,v 1.25 2012/09/07 19:18:26 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pigz/ChangeLog,v 1.26 2012/10/07 10:20:45 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, #274113
 
   07 Sep 2012; Johannes Huber <johu@gentoo.org> pigz-2.2.5.ebuild:
   Stable for x86, wrt bug #433888
