--- a/dev-perl/File-Flat/ChangeLog
+++ b/dev-perl/File-Flat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/File-Flat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.60 2012/08/27 18:18:31 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Flat/ChangeLog,v 1.61 2012/10/07 10:20:50 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> File-Flat-1.40.0.ebuild:
+  Stable for amd64, wrt bug #436856
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> File-Flat-1.00.ebuild,
   File-Flat-1.40.0.ebuild:
