--- a/sys-auth/polkit/ChangeLog
+++ b/sys-auth/polkit/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-auth/polkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/polkit/ChangeLog,v 1.101 2012/09/20 13:01:01 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/polkit/ChangeLog,v 1.102 2012/10/07 10:33:47 ssuominen Exp $
+
+*polkit-0.107-r2 (07 Oct 2012)
+
+  07 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> +polkit-0.107-r2.ebuild:
+  Dummy revision bump in order to avoid USE=systemd because sys-apps/systemd is
+  still marked unstable.
 
 *polkit-0.107-r1 (20 Sep 2012)
 
