--- a/profiles/arch/amd64/ChangeLog
+++ b/profiles/arch/amd64/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/AMD64 profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/amd64/ChangeLog,v 1.186 2012/09/15 13:06:50 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/amd64/ChangeLog,v 1.187 2012/10/07 10:38:50 ssuominen Exp $
+
+  07 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> package.use.mask:
+  Restore USE="systemd" mask to sys-auth/polkit for stabilization.
 
   15 Sep 2012; Johannes Huber <johu@gentoo.org> package.use.mask:
   Masked media-libs/phonon[zeitgeist] for stabilization as the use flag pulls a
