--- a/profiles/arch/x86/ChangeLog
+++ b/profiles/arch/x86/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/x86 profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/x86/ChangeLog,v 1.110 2012/09/15 13:04:55 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/x86/ChangeLog,v 1.111 2012/10/07 10:39:57 ssuominen Exp $
+
+  07 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> package.use.mask:
+  Restore USE="systemd" mask to sys-auth/polkit for stabilization.
 
   15 Sep 2012; Johannes Huber <johu@gentoo.org> package.use.mask:
   Masked media-libs/phonon[zeitgeist] for stabilization as the use flag pulls a
