--- a/sys-auth/consolekit/ChangeLog
+++ b/sys-auth/consolekit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/consolekit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.135 2012/10/05 14:58:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/consolekit/ChangeLog,v 1.136 2012/10/07 10:47:05 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  consolekit-0.4.5_p20120320-r1.ebuild:
+  Stable for amd64, wrt bug #436666
 
   05 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   consolekit-0.4.5_p20120320-r1.ebuild:
