--- a/dev-vcs/rapidsvn/ChangeLog
+++ b/dev-vcs/rapidsvn/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-vcs/rapidsvn
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.16 2012/10/07 09:00:10 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/ChangeLog,v 1.17 2012/10/07 11:20:26 jlec Exp $
+
+*rapidsvn-0.12.1 (07 Oct 2012)
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> -rapidsvn-0.12.1_pre8247.ebuild,
+  +rapidsvn-0.12.1.ebuild, +files/rapidsvn-0.12.1-locale.patch,
+  +files/rapidsvn-0.12.1-svncpp_link.patch,
+  -files/rapidsvn-0.12.1_pre8247-svncpp_link.patch:
+  Version Bump, #436412; remove prereleases; honor LINGUAS, #406409
 
   07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, #24135.
