--- a/dev-tex/tth/ChangeLog
+++ b/dev-tex/tth/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/tth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/tth/ChangeLog,v 1.17 2012/09/30 17:58:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/tth/ChangeLog,v 1.18 2012/10/07 11:23:27 jlec Exp $
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> -tth-3.66.ebuild:
+  Drop old
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tth-3.77.ebuild:
   Drop alpha keywords
