--- a/sys-fs/aufs3/ChangeLog
+++ b/sys-fs/aufs3/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/aufs3
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs3/ChangeLog,v 1.22 2012/08/13 07:50:47 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs3/ChangeLog,v 1.23 2012/10/07 11:37:44 jlec Exp $
+
+*aufs3-3_p20120813-r1 (07 Oct 2012)
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20120813-r1.ebuild:
+  Included patch to make the package compatible with non x86 & amd64 arches,
+  #432392
 
 *aufs3-3_p20120813 (13 Aug 2012)
 
