--- a/app-arch/pbzip2/ChangeLog
+++ b/app-arch/pbzip2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/pbzip2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.116 2012/10/07 10:20:11 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.117 2012/10/07 11:58:14 jlec Exp $
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> pbzip2-1.1.5.ebuild,
+  pbzip2-1.1.6.ebuild, pbzip2-1.1.8.ebuild:
+  Block other packages installing the /usr/bin/bzip2 symlink, #436354
 
   07 Oct 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer due retirement, #274113
