--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7014 2012/10/07 11:47:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7015 2012/10/07 12:01:30 eras Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  07 Oct 2012; Eray Aslan <eras@gentoo.org> package.mask:
+  Mask mail-client/pine for removal
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   +hardened/linux/uclibc/amd64/package.mask:
