--- a/dev-perl/GraphViz/ChangeLog
+++ b/dev-perl/GraphViz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/GraphViz
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.19 2012/06/24 12:59:52 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.20 2012/10/07 13:00:49 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> GraphViz-2.40.0.ebuild:
+  Stable for amd64, wrt bug #436864
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
