--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.430 2012/10/07 13:10:27 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.431 2012/10/07 13:15:52 jlec Exp $
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
+  Revert last change to not break packages with optional fortran support
 
   07 Oct 2012; Michał Górny <mgorny@gentoo.org> boost-utils.eclass:
   Fix stupid mistake in boost-utils_get_best_slot().
