--- a/net-fs/netatalk/ChangeLog
+++ b/net-fs/netatalk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-fs/netatalk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.89 2012/10/06 12:41:07 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/netatalk/ChangeLog,v 1.90 2012/10/07 13:18:02 ulm Exp $
+
+  07 Oct 2012; Ulrich Müller <ulm@gentoo.org> netatalk-2.2.1-r3.ebuild,
+  netatalk-2.2.3.ebuild, netatalk-3.0.ebuild, netatalk-3.0.1.ebuild:
+  Update blocker after package move of yudit.
 
 *netatalk-3.0.1 (06 Oct 2012)
 
