--- a/dev-python/sqlalchemy-migrate/ChangeLog
+++ b/dev-python/sqlalchemy-migrate/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/sqlalchemy-migrate
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/ChangeLog,v 1.12 2012/09/24 02:50:42 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sqlalchemy-migrate/ChangeLog,v 1.13 2012/10/07 13:30:24 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  sqlalchemy-migrate-0.7.1.ebuild, sqlalchemy-migrate-0.7.2.ebuild:
+  Add ~ia64/~s390/~sh/~sparc wrt #381709
 
   24 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   sqlalchemy-migrate-0.7.2.ebuild:
