--- a/net-print/lprng/ChangeLog
+++ b/net-print/lprng/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/lprng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/lprng/ChangeLog,v 1.66 2012/10/05 18:08:49 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/lprng/ChangeLog,v 1.67 2012/10/07 14:13:31 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> lprng-3.8.35-r1.ebuild:
+  alpha/ia64/sh/sparc/x86 stable wrt #432488
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> lprng-3.8.35-r1.ebuild:
   Marking lprng-3.8.35-r1 ppc64 for bug 432488
