--- a/app-editors/emacs/ChangeLog
+++ b/app-editors/emacs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/emacs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.536 2012/10/06 08:43:26 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.537 2012/10/07 14:18:33 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> emacs-24.2.ebuild:
+  alpha/ia64/s390/sh/sparc/x86 stable wrt #436520
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> emacs-24.2.ebuild:
   arm stable, bug #436520
