alpha/ia64/s390/sh/sparc/x86 stable wrt #436894
Package-Manager: portage-2.1.11.16/cvs/Linux ia64

--- a/net-dns/dnsmasq/ChangeLog
+++ b/net-dns/dnsmasq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.228 2012/10/05 18:00:14 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.229 2012/10/07 14:20:05 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> dnsmasq-2.63.ebuild:
+  alpha/ia64/s390/sh/sparc/x86 stable wrt #436894
 
   05 Oct 2012; Brent Baude <ranger@gentoo.org> dnsmasq-2.61.ebuild:
   Marking dnsmasq-2.61 ppc64 for bug 433076
