--- a/net-irc/eggdrop/ChangeLog
+++ b/net-irc/eggdrop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/eggdrop
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/eggdrop/ChangeLog,v 1.88 2012/10/06 14:37:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/eggdrop/ChangeLog,v 1.89 2012/10/07 14:22:23 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> eggdrop-1.6.21.ebuild:
+  alpha/ia64/sparc/x86 stable wrt #437400
 
   06 Oct 2012; Agostino Sarubbo <ago@gentoo.org> eggdrop-1.6.21.ebuild:
   Stable for amd64, wrt bug #437400
