--- a/dev-util/gtk-builder-convert/ChangeLog
+++ b/dev-util/gtk-builder-convert/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/gtk-builder-convert
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.14 2012/10/07 02:07:34 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-builder-convert/ChangeLog,v 1.15 2012/10/07 14:24:48 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  gtk-builder-convert-2.24.11.ebuild:
+  alpha/ia64/sh/sparc stable wrt #437382
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   gtk-builder-convert-2.24.11.ebuild:
