--- a/net-dns/avahi/ChangeLog
+++ b/net-dns/avahi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.233 2012/10/06 21:37:10 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.234 2012/10/07 14:33:51 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> avahi-0.6.30-r3.ebuild:
+  alpha/ia64/s390/sh/sparc stable wrt #431830
 
   06 Oct 2012; Anthony G. Basile <blueness@gentoo.org> avahi-0.6.30-r3.ebuild:
   stable ppc64, bug #431830
