--- a/net-im/psi/ChangeLog
+++ b/net-im/psi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/psi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.227 2012/09/03 13:27:47 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/psi/ChangeLog,v 1.228 2012/10/07 14:37:32 pacho Exp $
+
+  07 Oct 2012; Pacho Ramos <pacho@gentoo.org> psi-0.14-r4.ebuild:
+  Drop ebeep, bug #403911 by  Petr Gregor
 
   03 Sep 2012; Michael Palimaka <kensington@gentoo.org> psi-0.14-r4.ebuild:
   Add missing slot dependencies on Qt.
