--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.432 2012/10/07 13:30:23 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.433 2012/10/07 14:53:43 jlec Exp $
+
+  07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
+  Revert virtual/fortran depends again, because not only USE=fortran controlls
+  fortran needs
 
   07 Oct 2012; Justin Lecher <jlec@gentoo.org> fortran-2.eclass:
   Depend on virtual/fortran eclass wise but in an USE=fortran sensitive way,
