--- a/dev-db/mongodb/ChangeLog
+++ b/dev-db/mongodb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mongodb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.45 2012/09/11 17:47:10 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mongodb/ChangeLog,v 1.46 2012/10/07 14:59:52 grobian Exp $
+
+  07 Oct 2012; Fabian Groffen <grobian@gentoo.org> mongodb-2.2.0.ebuild:
+  Fix for Prefix
 
   11 Sep 2012; Ultrabug <ultrabug@gentoo.org> mongodb-2.2.0.ebuild,
   files/mongodb-2.2-fix-sconscript.patch,
@@ -277,4 +280,3 @@
   +files/mongodb.initd, +metadata.xml:
   Import ebuild from the sunrise overlay and apply various fixes. Resolves
   #273259
-
