--- a/dev-perl/HTTP-Message/ChangeLog
+++ b/dev-perl/HTTP-Message/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/HTTP-Message
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTTP-Message/ChangeLog,v 1.30 2012/09/02 16:22:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTTP-Message/ChangeLog,v 1.31 2012/10/07 15:23:29 tove Exp $
+
+*HTTP-Message-6.40.0 (07 Oct 2012)
+
+  07 Oct 2012; Torsten Veller <tove@gentoo.org> +HTTP-Message-6.40.0.ebuild:
+  Version bump
 
   02 Sep 2012; Torsten Veller <tove@gentoo.org> -HTTP-Message-6.20.0.ebuild:
   Cleanup
