--- a/app-shells/gentoo-bashcomp/ChangeLog
+++ b/app-shells/gentoo-bashcomp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/gentoo-bashcomp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.51 2012/10/07 00:35:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/gentoo-bashcomp/ChangeLog,v 1.52 2012/10/07 15:41:21 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org>
+  gentoo-bashcomp-20101217-r1.ebuild:
+  alpha/ia64/s390/sh/sparc/x86 stable wrt #437384
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   gentoo-bashcomp-20101217-r1.ebuild:
