--- a/dev-db/libdbi/ChangeLog
+++ b/dev-db/libdbi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libdbi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.48 2012/10/07 09:28:06 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi/ChangeLog,v 1.49 2012/10/07 15:42:06 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> libdbi-0.8.4.ebuild:
+  alpha/ia64/s390/sh/sparc/x86 stable wrt #425306
 
   07 Oct 2012; nixnut <nixnut@gentoo.org> libdbi-0.8.4.ebuild:
   ppc stable #425306
