--- a/dev-perl/GraphViz/ChangeLog
+++ b/dev-perl/GraphViz/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/GraphViz
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.20 2012/10/07 13:00:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/GraphViz/ChangeLog,v 1.21 2012/10/07 15:57:19 tove Exp $
+
+*GraphViz-2.110.0 (07 Oct 2012)
+
+  07 Oct 2012; Torsten Veller <tove@gentoo.org> +GraphViz-2.110.0.ebuild:
+  Version bump
 
   07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> GraphViz-2.40.0.ebuild:
   Stable for amd64, wrt bug #436864
