Drop alpha/ia64/sparc keywords
Package-Manager: portage-2.1.11.16/cvs/Linux ia64

--- a/dev-ruby/ruby-progressbar/ChangeLog
+++ b/dev-ruby/ruby-progressbar/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-progressbar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.43 2012/07/26 11:23:23 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.44 2012/10/07 16:49:41 armin76 Exp $
+
+  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-progressbar-0.0.9.ebuild,
+  ruby-progressbar-0.0.10.ebuild:
+  Drop alpha/ia64/sparc keywords
 
   26 Jul 2012; Anthony G. Basile <blueness@gentoo.org>
   ruby-progressbar-0.0.10.ebuild:
