--- a/sys-cluster/slurm/ChangeLog
+++ b/sys-cluster/slurm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/slurm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/slurm/ChangeLog,v 1.14 2012/10/07 10:09:34 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/slurm/ChangeLog,v 1.15 2012/10/07 17:14:05 alexxy Exp $
+
+*slurm-2.4.3 (07 Oct 2012)
+
+  07 Oct 2012; Alexey Shvetsov <alexxy@gentoo.org> +slurm-2.4.3.ebuild:
+  [sys-cluster/slurm] Version bump
 
   07 Oct 2012; Kacper Kowalik <xarthisius@gentoo.org> slurm-2.3.4.ebuild:
   Add blocker against net-analyzer/sinfo wrt #437476 by Diego Elio Pettenò
