--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7017 2012/10/07 15:57:43 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7018 2012/10/07 17:58:27 phajdan.jr Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  07 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  +arch/amd64/x32/package.mask, +arch/amd64/x32/package.use.mask:
+  Mask dev-lang/v8 and reverse dependencies on x32, bug #423815.
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   hardened/linux/uclibc/use.force:
