--- a/app-admin/sysstat/ChangeLog
+++ b/app-admin/sysstat/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/sysstat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.237 2012/09/16 13:48:30 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.238 2012/10/07 18:15:07 jer Exp $
+
+*sysstat-10.1.2 (07 Oct 2012)
+
+  07 Oct 2012; Jeroen Roovers <jer@gentoo.org> +sysstat-10.1.2.ebuild:
+  Version bump.
 
   16 Sep 2012; Jeroen Roovers <jer@gentoo.org> files/crontab:
   Remove & in cron jobs by Christian Ruppert (idl0r) (bug #435172).
