--- a/net-p2p/ncdc/ChangeLog
+++ b/net-p2p/ncdc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/ncdc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ncdc/ChangeLog,v 1.22 2012/08/16 13:38:21 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ncdc/ChangeLog,v 1.23 2012/10/07 18:25:07 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> ncdc-1.13.ebuild:
+  Stable for amd64, wrt bug #437456
 
 *ncdc-1.13 (16 Aug 2012)
 
