--- a/net-analyzer/arping/ChangeLog
+++ b/net-analyzer/arping/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/arping
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arping/ChangeLog,v 1.65 2012/09/20 02:36:54 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/arping/ChangeLog,v 1.66 2012/10/07 18:56:03 jer Exp $
+
+  07 Oct 2012; Jeroen Roovers <jer@gentoo.org> -arping-2.11.ebuild:
+  Old.
 
   20 Sep 2012; Anthony G. Basile <blueness@gentoo.org> arping-2.12.ebuild:
   Stable ppc64, bug #433321
