--- a/dev-perl/Test-Inline/ChangeLog
+++ b/dev-perl/Test-Inline/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Test-Inline
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Inline/ChangeLog,v 1.73 2012/08/27 18:17:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Inline/ChangeLog,v 1.74 2012/10/07 19:07:36 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Test-Inline-2.208.ebuild:
+  Stable for amd64, wrt bug #436870
 
   27 Aug 2012; Raúl Porcel <armin76@gentoo.org> Test-Inline-2.201.ebuild,
   Test-Inline-2.208.ebuild, Test-Inline-2.212.0.ebuild:
