--- a/net-proxy/dnsproxy/ChangeLog
+++ b/net-proxy/dnsproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-proxy/dnsproxy
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/dnsproxy/ChangeLog,v 1.11 2011/12/21 09:03:23 phajdan.jr Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/dnsproxy/ChangeLog,v 1.12 2012/10/07 19:11:54 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dnsproxy-1.16-r1.ebuild:
+  eapi4
 
   21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> dnsproxy-1.16-r1.ebuild:
   x86 stable wrt bug #394035
