--- a/net-proxy/dnsproxy/ChangeLog
+++ b/net-proxy/dnsproxy/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-proxy/dnsproxy
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/dnsproxy/ChangeLog,v 1.12 2012/10/07 19:11:54 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/dnsproxy/ChangeLog,v 1.13 2012/10/07 19:12:21 ago Exp $
+
+  07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dnsproxy-1.16-r1.ebuild:
+  Stable for amd64, wrt bug #436884
 
   07 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dnsproxy-1.16-r1.ebuild:
   eapi4
