--- a/media-tv/gentoo-vdr-scripts/ChangeLog
+++ b/media-tv/gentoo-vdr-scripts/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/gentoo-vdr-scripts
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.121 2012/10/07 17:20:04 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/gentoo-vdr-scripts/ChangeLog,v 1.122 2012/10/07 19:13:58 hd_brummy Exp $
+
+*gentoo-vdr-scripts-0.5.3 (07 Oct 2012)
+
+  07 Oct 2012; Joerg Bornkessel <hd_brummy@gentoo.org>
+  +gentoo-vdr-scripts-0.5.3.ebuild:
+  bump
 
   07 Oct 2012; Joerg Bornkessel <hd_brummy@gentoo.org>
   -gentoo-vdr-scripts-0.4.7.ebuild, -gentoo-vdr-scripts-0.5.0_rc2.ebuild,
