--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1017 2012/10/07 18:31:47 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1018 2012/10/07 19:36:37 mpagano Exp $
+
+*gentoo-sources-3.6.1 (07 Oct 2012)
+
+  07 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.6.1.ebuild:
+  Linux patch 3.6.1
 
 *gentoo-sources-3.5.6 (07 Oct 2012)
 
