--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.411 2012/10/08 05:18:28 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.412 2012/10/08 05:20:22 zerochaos Exp $
+
+  08 Oct 2012; Rick Farina <zerochaos@gentoo.org> wireshark-1.8.3-r1.ebuild:
+  whitespace fix, sorry
 
   08 Oct 2012; Rick Farina <zerochaos@gentoo.org> wireshark-1.8.3-r1.ebuild:
   add installation of header files, this is needed for building plugins
