--- a/net-dns/dnsmasq/ChangeLog
+++ b/net-dns/dnsmasq/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.229 2012/10/07 14:20:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.230 2012/10/08 05:50:08 chutzpah Exp $
+
+  08 Oct 2012; Patrick McLean <chutzpah@gentoo.org> -dnsmasq-2.57.ebuild,
+  -dnsmasq-2.61.ebuild, -files/dnsmasq.confd, -files/dnsmasq-init:
+  Clean out older versions.
 
   07 Oct 2012; Raúl Porcel <armin76@gentoo.org> dnsmasq-2.63.ebuild:
   alpha/ia64/s390/sh/sparc/x86 stable wrt #436894
