--- a/app-misc/worker/ChangeLog
+++ b/app-misc/worker/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/worker
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.102 2012/09/30 18:00:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/worker/ChangeLog,v 1.103 2012/10/08 05:54:36 kensington Exp $
+
+  08 Oct 2012; Michael Palimaka <kensington@gentoo.org> -worker-2.17.8.ebuild:
+  Remove old.
 
   30 Sep 2012; Raúl Porcel <armin76@gentoo.org> worker-2.17.8.ebuild,
   worker-2.18.1.ebuild:
@@ -230,4 +233,3 @@
   -worker-2.13.1.ebuild, -worker-2.14.0-r1.ebuild, -worker-2.14.4.ebuild,
   +worker-2.15.0.ebuild:
   Purge old versions,  version bump
-
