--- a/app-misc/cdircmp/ChangeLog
+++ b/app-misc/cdircmp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/cdircmp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.17 2012/10/06 16:59:30 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.18 2012/10/08 06:01:18 kensington Exp $
+
+  08 Oct 2012; Michael Palimaka <kensington@gentoo.org> -cdircmp-0.3.ebuild:
+  Remove old.
 
   06 Oct 2012; Raúl Porcel <armin76@gentoo.org> cdircmp-0.3.ebuild,
   cdircmp-0.3-r1.ebuild:
@@ -53,4 +56,3 @@
   02 May 2004; Bryan Østergaard <kloeri@gentoo.org> +metadata.xml,
   +cdircmp-0.3.ebuild:
   Initial import, bug #48249.
-
