--- a/dev-ruby/ruby-progressbar/ChangeLog
+++ b/dev-ruby/ruby-progressbar/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/ruby-progressbar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.44 2012/10/07 16:49:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-progressbar/ChangeLog,v 1.45 2012/10/08 06:06:31 graaff Exp $
+
+*ruby-progressbar-1.0.2 (08 Oct 2012)
+
+  08 Oct 2012; Hans de Graaff <graaff@gentoo.org>
+  +ruby-progressbar-1.0.2.ebuild:
+  Version bump. Drop hppa ppc ppc64 x86 x86-fbsd due to new timecop dependency,
+  bug 437582.
 
   07 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-progressbar-0.0.9.ebuild,
   ruby-progressbar-0.0.10.ebuild:
