--- a/kde-base/ksudoku/ChangeLog
+++ b/kde-base/ksudoku/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/ksudoku
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/ksudoku/ChangeLog,v 1.133 2012/10/02 18:11:42 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/ksudoku/ChangeLog,v 1.134 2012/10/08 06:39:23 kensington Exp $
+
+  08 Oct 2012; Michael Palimaka <kensington@gentoo.org> ksudoku-4.9.2.ebuild:
+  Make OpenGL support optional and add a missing dependency on virtual/glu.
+  Fixes bug #437274.
 
 *ksudoku-4.9.2 (02 Oct 2012)
 
@@ -535,4 +539,3 @@
   18 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org> +metadata.xml,
   +ksudoku-4.0.0.ebuild:
   Added KDE 4.0.0's ksudoku.
-
