--- a/net-proxy/squid/ChangeLog
+++ b/net-proxy/squid/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-proxy/squid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.352 2012/09/26 16:08:59 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.353 2012/10/08 07:20:25 eras Exp $
+
+*squid-3.2.2 (08 Oct 2012)
+
+  08 Oct 2012; Eray Aslan <eraya@gentoo.org> +squid-3.2.2.ebuild:
+  Version bump - bug #437498
 
 *squid-3.2.1-r1 (26 Sep 2012)
 
