--- a/app-admin/keepass/ChangeLog
+++ b/app-admin/keepass/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-admin/keepass
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/keepass/ChangeLog,v 1.3 2012/09/26 13:34:34 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/keepass/ChangeLog,v 1.4 2012/10/08 08:09:23 kensington Exp $
+
+*keepass-2.20.1 (08 Oct 2012)
+
+  08 Oct 2012; Michael Palimaka <kensington@gentoo.org> +keepass-2.20.1.ebuild,
+  -files/keepass-2.19-skip-sgen-if-unix.patch,
+  -files/keepass-2.19-xsl-path-detection.patch, -keepass-2.19.ebuild,
+  -keepass-2.20.ebuild:
+  Version bump. Remove old.
 
 *keepass-2.20-r1 (26 Sep 2012)
 
