Fix building with glibc-2.16.0 - bug #437660
Package-Manager: portage-2.2.0_alpha136/cvs/Linux x86_64

--- a/app-crypt/shishi/ChangeLog
+++ b/app-crypt/shishi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/shishi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/shishi/ChangeLog,v 1.4 2012/07/11 09:11:47 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/shishi/ChangeLog,v 1.5 2012/10/09 08:50:50 eras Exp $
+
+*shishi-1.0.1-r1 (09 Oct 2012)
+
+  09 Oct 2012; Eray Aslan <eraya@gentoo.org> +files/shishi_gets.patch,
+  +shishi-1.0.1-r1.ebuild:
+  Fix building with glibc-2.16.0 - bug #437660
 
   11 Jul 2012; Eray Aslan <eras@gentoo.org> shishi-1.0.1.ebuild,
   +files/shishi_automake-1.12.patch:
@@ -19,4 +25,3 @@
   +files/shishi_resolv.patch, +files/shishid.confd, +files/shishid.init,
   +metadata.xml:
   Initial import - bug #255461. Based on ebuild by AD Rutledge
-
